// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-dropdown #render should render as expected with gux-option 1`] = `
<gux-dropdown lang="en" value="j">
  <template shadowrootmode="open">
    <gux-popup>
      <div class="gux-target-container-collapsed" slot="target">
        <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
          <div class="gux-field-content">
            <div class="gux-placeholder">
              Select...
            </div>
          </div>
          <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown"></gux-icon>
        </button>
      </div>
      <slot slot="popup"></slot>
    </gux-popup>
  </template>
  <gux-listbox aria-label="Animals" role="listbox" tabindex="0">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    <gux-option aria-disabled="false" aria-selected="false" class="gux-show-subtext" id="gux-option-i" role="option" value="a">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
          <slot name="subtext"></slot>
        </div>
      </template>
      Ant
      <span slot="subtext">
        Small
      </span>
    </gux-option>
    <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
          <slot name="subtext"></slot>
        </div>
      </template>
      Bat
    </gux-option>
    <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
          <slot name="subtext"></slot>
        </div>
      </template>
      Cat
    </gux-option>
    <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="d">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
          <slot name="subtext"></slot>
        </div>
      </template>
      Dog
    </gux-option>
    <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="e">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
          <slot name="subtext"></slot>
        </div>
      </template>
      Eel
    </gux-option>
    <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="f">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
          <slot name="subtext"></slot>
        </div>
      </template>
      Frog
    </gux-option>
    <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="g">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
          <slot name="subtext"></slot>
        </div>
      </template>
      Goat
    </gux-option>
    <gux-option aria-disabled="false" aria-selected="false" class="gux-show-subtext" id="gux-option-i" role="option" value="h">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
          <slot name="subtext"></slot>
        </div>
      </template>
      Horse
      <span slot="subtext">
        Large
      </span>
    </gux-option>
    <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="i">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
          <slot name="subtext"></slot>
        </div>
      </template>
      Ibis
    </gux-option>
  </gux-listbox>
</gux-dropdown>
`;

exports[`gux-dropdown #render should render as expected with gux-option-group and gux-option 1`] = `
<gux-dropdown lang="en" value="f">
  <template shadowrootmode="open">
    <gux-popup>
      <div class="gux-target-container-collapsed" slot="target">
        <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
          <div class="gux-field-content">
            <div class="gux-selected-option">
              <gux-truncate>
                Frog
              </gux-truncate>
            </div>
          </div>
          <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown"></gux-icon>
        </button>
      </div>
      <slot slot="popup"></slot>
    </gux-popup>
  </template>
  <gux-listbox aria-label="Animals" role="listbox" tabindex="0">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    <gux-option-group-beta label="Group 1">
      <template shadowrootmode="open">
        <div class="gux-option-group">
          <div class="gux-option-group-label" role="presentation">
            Group 1
          </div>
          <div role="group">
            <slot></slot>
          </div>
          <gux-list-divider></gux-list-divider>
        </div>
      </template>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="a">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate>
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate>
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="c">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate>
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="d">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate>
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Dog
      </gux-option>
    </gux-option-group-beta>
    <gux-option-group-beta label="Group 2">
      <template shadowrootmode="open">
        <div class="gux-option-group">
          <div class="gux-option-group-label" role="presentation">
            Group 2
          </div>
          <div role="group">
            <slot></slot>
          </div>
          <gux-list-divider></gux-list-divider>
        </div>
      </template>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="e">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate>
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Eel
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-i" role="option" value="f">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate>
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Frog
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="g">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate>
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Goat
      </gux-option>
    </gux-option-group-beta>
    <gux-option-group-beta label="Group 3">
      <template shadowrootmode="open">
        <div class="gux-option-group">
          <div class="gux-option-group-label" role="presentation">
            Group 3
          </div>
          <div role="group">
            <slot></slot>
          </div>
          <gux-list-divider></gux-list-divider>
        </div>
      </template>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="h">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate>
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Horse
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="i">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate>
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ibis
      </gux-option>
    </gux-option-group-beta>
  </gux-listbox>
</gux-dropdown>
`;

exports[`gux-dropdown #render should render as expected with gux-option-group and gux-option-icon 1`] = `
<gux-dropdown lang="en" value="f">
  <template shadowrootmode="open">
    <gux-popup>
      <div class="gux-target-container-collapsed" slot="target">
        <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
          <div class="gux-field-content">
            <div class="gux-placeholder">
              Select...
            </div>
          </div>
          <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown"></gux-icon>
        </button>
      </div>
      <slot slot="popup"></slot>
    </gux-popup>
  </template>
  <gux-listbox aria-label="Animals" role="listbox" tabindex="0">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    <gux-option-group-beta label="Group 1">
      <template shadowrootmode="open">
        <div class="gux-option-group">
          <div class="gux-option-group-label" role="presentation">
            Group 1
          </div>
          <div role="group">
            <slot></slot>
          </div>
          <gux-list-divider></gux-list-divider>
        </div>
      </template>
      <gux-option-icon aria-disabled="false" aria-selected="false" class="gux-show-subtext" icon-color="var(--gux-blue-60)" icon-name="user" id="gux-option-icon-i" role="option" value="leonardo">
        <template shadowrootmode="open">
          <gux-icon decorative="" icon-name="user" style="color: var(--gux-blue-60);"></gux-icon>
          <div class="gux-option-wrapper">
            <gux-truncate>
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Leonardo
        <span slot="subtext">
          TMNT
        </span>
      </gux-option-icon>
      <gux-option-icon aria-disabled="false" aria-selected="false" icon-color="#8452cf" icon-name="user" id="gux-option-icon-i" role="option" value="donatello">
        <template shadowrootmode="open">
          <gux-icon decorative="" icon-name="user" style="color: #8452cf;"></gux-icon>
          <div class="gux-option-wrapper">
            <gux-truncate>
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Donatello
      </gux-option-icon>
    </gux-option-group-beta>
    <gux-option-group-beta label="Group 2">
      <template shadowrootmode="open">
        <div class="gux-option-group">
          <div class="gux-option-group-label" role="presentation">
            Group 2
          </div>
          <div role="group">
            <slot></slot>
          </div>
          <gux-list-divider></gux-list-divider>
        </div>
      </template>
      <gux-option-icon aria-disabled="false" aria-selected="false" icon-color="rgb(234, 11, 11)" icon-name="user" id="gux-option-icon-i" role="option" value="raphael">
        <template shadowrootmode="open">
          <gux-icon decorative="" icon-name="user" style="color: rgb(234, 11, 11);"></gux-icon>
          <div class="gux-option-wrapper">
            <gux-truncate>
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Raphael
      </gux-option-icon>
      <gux-option-icon aria-disabled="false" aria-selected="false" icon-color="#e08915" icon-name="user" icon-sr-text="Screenreader information about the icon goes here, if needed" id="gux-option-icon-i" role="option" value="michelangelo">
        <template shadowrootmode="open">
          <gux-icon icon-name="user" screenreader-text="Screenreader information about the icon goes here, if needed" style="color: #e08915;"></gux-icon>
          <div class="gux-option-wrapper">
            <gux-truncate>
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Michelangelo
      </gux-option-icon>
    </gux-option-group-beta>
  </gux-listbox>
</gux-dropdown>
`;

exports[`gux-dropdown #render should render as expected with gux-option-icon 1`] = `
<gux-dropdown lang="en" value="j">
  <template shadowrootmode="open">
    <gux-popup>
      <div class="gux-target-container-collapsed" slot="target">
        <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
          <div class="gux-field-content">
            <div class="gux-placeholder">
              Select...
            </div>
          </div>
          <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown"></gux-icon>
        </button>
      </div>
      <slot slot="popup"></slot>
    </gux-popup>
  </template>
  <gux-listbox aria-label="Animals" role="listbox" tabindex="0">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    <gux-option-icon aria-disabled="false" aria-selected="false" class="gux-show-subtext" icon-color="var(--gux-blue-60)" icon-name="user" id="gux-option-icon-i" role="option" value="leonardo">
      <template shadowrootmode="open">
        <gux-icon decorative="" icon-name="user" style="color: var(--gux-blue-60);"></gux-icon>
        <div class="gux-option-wrapper">
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
          <slot name="subtext"></slot>
        </div>
      </template>
      Leonardo
      <span slot="subtext">
        TMNT
      </span>
    </gux-option-icon>
    <gux-option-icon aria-disabled="false" aria-selected="false" icon-color="#8452cf" icon-name="user" id="gux-option-icon-i" role="option" value="donatello">
      <template shadowrootmode="open">
        <gux-icon decorative="" icon-name="user" style="color: #8452cf;"></gux-icon>
        <div class="gux-option-wrapper">
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
          <slot name="subtext"></slot>
        </div>
      </template>
      Donatello
    </gux-option-icon>
    <gux-option-icon aria-disabled="false" aria-selected="false" icon-color="rgb(234, 11, 11)" icon-name="user" id="gux-option-icon-i" role="option" value="raphael">
      <template shadowrootmode="open">
        <gux-icon decorative="" icon-name="user" style="color: rgb(234, 11, 11);"></gux-icon>
        <div class="gux-option-wrapper">
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
          <slot name="subtext"></slot>
        </div>
      </template>
      Raphael
    </gux-option-icon>
    <gux-option-icon aria-disabled="false" aria-selected="false" icon-color="#e08915" icon-name="user" icon-sr-text="Screenreader information about the icon goes here, if needed" id="gux-option-icon-i" role="option" value="michelangelo">
      <template shadowrootmode="open">
        <gux-icon icon-name="user" screenreader-text="Screenreader information about the icon goes here, if needed" style="color: #e08915;"></gux-icon>
        <div class="gux-option-wrapper">
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
          <slot name="subtext"></slot>
        </div>
      </template>
      Michelangelo
    </gux-option-icon>
  </gux-listbox>
</gux-dropdown>
`;
